Java 6 compatible (previously Java 8 and above)